Colaboratory를 통해 생성됨

--- a/KCCV2023_CPC_HOI_Tutorial.ipynb
+++ b/KCCV2023_CPC_HOI_Tutorial.ipynb
@@ -1379,7 +1379,9 @@
         "## Visualize Image & Video\n",
         "- `video_vis` : visualize video if True else image\n",
         "- `threshold`: HOI triplet score threshold\n",
-        "- `topk`: visualize topk predictions where the scores are above threshold"
+        "- `topk`: visualize topk predictions where the scores are above threshold\n",
+        "- `path_id` : inference path index (0: x->HOI, 1: x->HO->I, 2: x->HI->O, 3: x->OI->H)\n",
+        "- `aug_path` : use augmented path if needed (list)"
       ],
       "metadata": {
         "id": "hkIfX78H8YHt"
